style/members.css
body{
	font-size: medium;
	font-family: 'Oxygen', sans-serif;
	background-color: #000;
	margin: 0px;
	margin-left: auto;
	margin-right: auto;
	max-width: 960px;
}
h1{
	font-family: 'Kaushan Script', cursive;
	color: #CFB53B;
	margin-left: 20px;
}
/* content styling */
.content{
	background-color: #eee;
	padding: 20px;
	min-height: 100%;
	overflow: auto;
}
#member {
    overflow:auto;
}
#member li{
        float: left;
	margin: 0;
	padding: 0;
}
#member ul{
	list-style-type: none;
	margin: 0;
	padding: 0;
	overflow: hidden;
	float: right;
}
#member div{
    text-align:center;
}
.member {
    width:160px;
    height:200px;
    margin-top:20px;
    margin-bottom:10px;
    margin-right:0px;
    margin-left:20px;
    box-shadow: 0px 0px 10px #CFB53B;
}
.icon {
    width:20px;
    height:20px;
    margin-top:0px;
    margin-bottom:195px;
    margin-right:0px;
    margin-left:0px;
    
}
/* menu bar styling */
#menubar{
	overflow: auto;
	color: #CFB53B;
}
#menubar h1{
	display: none;
}
#menubar ul{
	list-style-type: none;
	margin: 0;
	padding: 0;
	overflow: hidden;
	float: right;
}
#menubar li{
	float: left;
	margin: 0;
	padding: 0;
}
#menubar a:link, #menubar a:visited{
	display: block;
	padding: 8px 20px 4px 20px;
	margin-left: 10px;
	text-decoration: none;
	text-transform: uppercase;
	text-align: center;
	font-size: medium;
	color: #CFB53B;
	font-weight: bold;
	border-bottom: solid 4px #000;
}
#menubar a:hover{
	border-color: #CFB53B;
}
#menubar a#activepage{
	border-bottom: solid 4px #CFB53B;
}

